--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-excercise",
+  "name": "typescript-practice",
   "version": "1.0.0",
   "description": "Typescript excercise solutions",
   "main": "index.js",
@@ -14,17 +14,22 @@
     "typescript": "^3.5.3"
   },
   "scripts": {
-    "0": "ts-node src/excercise_1.ts",
-    "1": "ts-node src/excercise_2.ts",
-    "2": "ts-node src/excercise_3.ts",
-    "3": "ts-node src/excercise_4.ts",
-    "4": "ts-node src/excercise_5.ts",
-    "5": "ts-node src/excercise_6.ts",
-    "6": "ts-node src/excercise_7.ts",
-    "7": "ts-node src/excercise_8.ts",
-    "8": "ts-node src/excercise_9.ts",
-    "9": "ts-node src/excercise_10.ts",
-    "10": "ts-node src/excercise_11.ts"
+    "0": "ts-node exercises/exercise-00/index.ts",
+    "1": "ts-node exercises/exercise-01/index.ts",
+    "2": "ts-node exercises/exercise-02/index.ts",
+    "3": "ts-node exercises/exercise-03/index.ts",
+    "4": "ts-node exercises/exercise-04/index.ts",
+    "5": "ts-node exercises/exercise-05/index.ts",
+    "6": "ts-node exercises/exercise-06/index.ts",
+    "7": "ts-node exercises/exercise-07/index.ts",
+    "8": "ts-node exercises/exercise-08/index.ts",
+    "9": "ts-node exercises/exercise-09/index.ts",
+    "10": "ts-node exercises/exercise-10/index.ts",
+    "11": "ts-node exercises/exercise-11/index.ts",
+    "12": "ts-node exercises/exercise-12/index.ts",
+    "13": "ts-node exercises/exercise-13/index.ts",
+    "14": "ts-node exercises/exercise-14/index.ts",
+    "15": "ts-node exercises/exercise-15/index.ts"
   },
   "repository": {
     "type": "git",
